--- a/kyc_approval_app/Templates/officer_login.html
+++ b/kyc_approval_app/Templates/officer_login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Officer Login</title>
     <link rel="stylesheet" type="text/css" href="{% static 'messages.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'user_login.css' %}">
  
