--- a/kyc_approval_app/Templates/user_login.html
+++ b/kyc_approval_app/Templates/user_login.html
@@ -49,7 +49,7 @@
 
             <div class="form-group">
                 <label for="password">Password</label>
-                <input type="password" id="password" name="password" required>
+                <input type="password" id="password" placeholder="Enter your password" name="password" required>
             </div>
 
             <button type="submit" class="submit-btn">Login</button>
