--- a/kyc_approval_app/Templates/list_requests.html
+++ b/kyc_approval_app/Templates/list_requests.html
@@ -1,6 +1,7 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -45,7 +46,7 @@
             </tr>
             {% empty %}
             <tr>
-                <td colspan="5" class="no-requests">No recent requests</td>
+                <td colspan="5" class="no-requests">No requests</td>
             </tr>
             {% endfor %}
         </tbody>
