--- a/kyc_approval_app/Templates/edit_profile.html
+++ b/kyc_approval_app/Templates/edit_profile.html
@@ -1,12 +1,14 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edit Profile</title>
     <link rel="stylesheet" type="text/css" href="{% static 'edit_profile.css' %}">
 </head>
+
 <body>
 
     <div class="container">
@@ -31,16 +33,16 @@
             <div class="form-group">
                 <label for="gender">Gender</label>
                 <select id="gender" name="gender" required>
-                    <option value="Male" {% if gender == "Male" %}selected{% endif %}>Male</option>
-                    <option value="Female" {% if gender == "Female" %}selected{% endif %}>Female</option>
-                    <option value="Other" {% if gender == "Other" %}selected{% endif %}>Other</option>
+                    <option value="Male" {% if gender=="Male" %}selected{% endif %}>Male</option>
+                    <option value="Female" {% if gender=="Female" %}selected{% endif %}>Female</option>
+                    <option value="Other" {% if gender=="Other" %}selected{% endif %}>Other</option>
                 </select>
             </div>
 
             <div class="form-group">
                 <label for="phone_number">Phone Number</label>
-                <input type="tel" id="phone_number" name="phone_number" value="{{ phone }}"pattern="[0-9]{10}" maxlength="10" required 
-                onkeypress="return event.charCode >= 48 && event.charCode <= 57">
+                <input type="tel" id="phone_number" name="phone_number" value="{{ phone }}" pattern="[0-9]{10}"
+                    maxlength="10" required onkeypress="return event.charCode >= 48 && event.charCode <= 57">
             </div>
 
             <div class="form-group">
@@ -53,4 +55,5 @@
     </div>
 
 </body>
+
 </html>
