--- a/kyc_approval_app/Templates/kyc_status_email.html
+++ b/kyc_approval_app/Templates/kyc_status_email.html
@@ -3,13 +3,15 @@
 <body>
     <p>Dear {{ kyc_request.citizen.full_name }},</p>
 
-    <p>Your KYC request, submitted on {{ kyc_request.submitted_at|date:"d F Y" }}, has been {{ kyc_request.status|capfirst }}.</p>
+    <p>Your KYC request, submitted on {{ kyc_request.submitted_at|date:"d F Y" }}, has been {{
+        kyc_request.status|capfirst }}.</p>
 
     {% if kyc_request.remarks %}
-        <p><strong>Remarks from the officer:</strong> {{ kyc_request.remarks }}</p>
+    <p><strong>Remarks from the officer:</strong> {{ kyc_request.remarks }}</p>
     {% endif %}
 
     <p>Please log in to your account to check further details.</p>
     <p>Best regards,<br> KYC Approval Team</p>
 </body>
+
 </html>
