--- a/kyc_approval_app/Templates/user_login.html
+++ b/kyc_approval_app/Templates/user_login.html
@@ -1,14 +1,16 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KYC Approval Login</title>
     <link rel="stylesheet" type="text/css" href="{% static 'messages.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'user_login.css' %}">
- 
+
 </head>
+
 <body>
     <div class="login-container">
         <h2>KYC Approval Login</h2>
@@ -42,9 +44,8 @@
 
             <div id="mobile-group" class="form-group" style="display: none;">
                 <label for="mobile">Mobile Number</label>
-                <input type="tel" id="mobile" name="mobile" placeholder="Enter your phone number" 
-                pattern="[0-9]{10}" maxlength="10" required 
-                onkeypress="return event.charCode >= 48 && event.charCode <= 57">
+                <input type="tel" id="mobile" name="mobile" placeholder="Enter your phone number" pattern="[0-9]{10}"
+                    maxlength="10" required onkeypress="return event.charCode >= 48 && event.charCode <= 57">
             </div>
 
             <div class="form-group">
@@ -91,4 +92,5 @@
 
     </script>
 </body>
+
 </html>
