--- a/kyc_approval_app/static/view_request.css
+++ b/kyc_approval_app/static/view_request.css
@@ -152,27 +152,27 @@ body {
 
 
 button {
-margin-top: 1%;
-padding: 8px 15px;
-border: none;
-cursor: pointer;
-border-radius: 5px;
-font-size: 14px;
+    margin-top: 1%;
+    padding: 8px 15px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    font-size: 14px;
 }
 
 .approve-btn {
-background: #28a745;
-color: white;
+    background: #28a745;
+    color: white;
 }
 
 .reject-btn {
-background: #dc3545;
-color: white;
-margin-left: 10px;
+    background: #dc3545;
+    color: white;
+    margin-left: 10px;
 }
 
 .approve-btn:hover {
-background: #218838;
+    background: #218838;
 }
 
 
@@ -202,7 +202,7 @@ background: #218838;
     color: #555;
 }
 
-/* Textarea Styling */
+
 textarea[name="remarks"] {
     width: 100%;
     height: 100px;
@@ -218,4 +218,35 @@ textarea[name="remarks"] {
 textarea[name="remarks"]:focus {
     border-color: #007bff;
     box-shadow: 0 0 5px rgba(0, 123, 255, 0.3);
+}
+
+
+
+.request-id {
+    font-size: 16px;
+    font-weight: bold;
+    color: #555;
+    margin-bottom: 5px;
+}
+
+
+
+
+
+
+
+
+.submission-log {
+    display: inline-block;
+    color: #555;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 14px;
+    margin-top: 25px;
+
+}
+
+.submission-log:hover {
+    text-decoration: underline;
+
 }
