--- a/kyc_approval_app/Templates/user_signup.html
+++ b/kyc_approval_app/Templates/user_signup.html
@@ -55,6 +55,13 @@
             <div class="form-group">
                 <label for="email" class="required">Email Address</label>
                 <input type="email" id="email" name="email" placeholder="Enter your email address" required>
+
+                <div id="otpPrompt" style="display: none; margin-top: 10px;">
+                    <label for="otp">Enter OTP</label>
+                    <input type="text" id="otp" maxlength="6" placeholder="Enter OTP">
+                    <button type="button" id="submitOtpBtn" class="btn">Submit OTP</button>
+                </div>
+                
             </div>
 
             <div class="form-group">
@@ -88,3 +95,9 @@
 </body>
 
 </html>
+
+
+
+
+
+
