--- a/kyc_approval_app/static/kyc_submission.css
+++ b/kyc_approval_app/static/kyc_submission.css
@@ -154,3 +154,25 @@ body {
 .file-input-group input[type="file"]::-webkit-file-upload-button:hover {
     background-color: #0056b3;
 }
+
+.request-id {
+    font-size: 16px;
+    font-weight: bold;
+    color: #555;
+    margin-bottom: 5px;
+}
+
+.submission-log {
+    display: inline-block;
+    color: #555;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 14px;
+    margin-bottom: 10px;
+
+}
+
+.submission-log:hover {
+    text-decoration: underline;
+
+}
